Update Java Links.md